--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,6 +29,15 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>openpnp-maven</id>
+            <url>https://github.com/openpnp/opencv/releases/download/4.5.1-2/</url>
+        </repository>
+
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -108,7 +117,15 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.7.1</version>
+        </dependency>
+
     </dependencies>
+
+
 
     <build>
         <plugins>
