--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TagWise
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/project
+spring.datasource.url=jdbc:mariadb://localhost:3306/nli
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
@@ -27,3 +27,7 @@ spring.data.redis.password=
 # Lettuce Connection Pool Settings
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-idle=8
+
+spring.mvc.hiddenmethod.filter.enabled=true
+spring.mvc.problemdetails.enabled=true
+file.upload-dir=uploads/datasets
