--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -29,15 +29,6 @@
     <properties>
         <java.version>17</java.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>openpnp-maven</id>
-            <url>https://github.com/openpnp/opencv/releases/download/4.5.1-2/</url>
-        </repository>
-
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -117,15 +108,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+
         <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>5.7.1</version>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.34</version>
+            <scope>provided</scope>
         </dependency>
-
     </dependencies>
-
-
 
     <build>
         <plugins>
