--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=TagWise
 
-spring.datasource.url=jdbc:mariadb://localhost:3307/nli
+spring.datasource.url=jdbc:mariadb://localhost:3306/nnn
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
