dashboard and stuff

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -27,3 +27,8 @@ spring.data.redis.password=
 # Lettuce Connection Pool Settings
 spring.data.redis.lettuce.pool.max-active=8
 spring.data.redis.lettuce.pool.max-idle=8
+
+
+
+# Security Logs
+logging.level.org.springframework.security=DEBUG
