--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=TagWise
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/nnn
+spring.datasource.url=jdbc:mariadb://localhost:3306/nli
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
